updated database config

--- a/package.json
+++ b/package.json
@@ -3,7 +3,9 @@
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
-    "start": "node --watch --env-file=.env index.js"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "dev": "nodemon --env-file=.env .",
+    "start": "node ."
   },
   "keywords": [],
   "author": "",
@@ -12,7 +14,11 @@
   "description": "",
   "dependencies": {
     "cloudinary": "^1.41.3",
+    "dotenv": "^17.2.2",
     "express": "^5.1.0",
     "mongoose": "^8.17.2"
+  },
+  "devDependencies": {
+    "nodemon": "^3.1.10"
   }
 }
